# hadb

./: .gitignore  ADVERSARIAL_REVIEW.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  ROADMAP.md  TEST_COVERAGE.md
.cargo/: config.toml
fuzz/: Cargo.toml
hadb/: Cargo.toml  README.md
hadb-changeset/: Cargo.toml
hadb-changeset/src/: apply.rs  physical.rs  storage.rs  test_utils.rs
hadb-cli/: Cargo.toml  README.md
hadb-cli/src/: args.rs  config.rs  errors.rs  lib.rs  runner.rs  signals.rs
hadb-io/: Cargo.toml  README.md
hadb-io/src/: config.rs  http_storage.rs  lib.rs  retention.rs  retry.rs  s3.rs  storage.rs  uploader.rs  webhook.rs
hadb-io/tests/: property_retry.rs
hadb-lease/: Cargo.toml
hadb-lease-cinch/: Cargo.toml
hadb-lease-cinch/src/: fence.rs  lease_store.rs  lib.rs
hadb-lease-etcd/: Cargo.toml  README.md
hadb-lease-etcd/src/: lease_store.rs  lib.rs
hadb-lease-http/: Cargo.toml  README.md
hadb-lease-http/src/: fence.rs  lease_store.rs  lib.rs
hadb-lease-mem/: Cargo.toml
hadb-lease-mem/src/: lib.rs
hadb-lease-nats/: Cargo.toml  README.md
hadb-lease-nats/src/: lease_store.rs  lib.rs
hadb-lease-s3/: Cargo.toml  README.md
hadb-lease-s3/src/: lease_store.rs  lib.rs  node_registry.rs  storage.rs
hadb-lease/src/: fence.rs  lib.rs
hadb-manifest-etcd/: Cargo.toml
hadb-manifest-etcd/src/: lib.rs  manifest_store.rs
hadb-manifest-http/: Cargo.toml  README.md
hadb-manifest-http/src/: lib.rs  manifest_store.rs
hadb-manifest-nats/: Cargo.toml
hadb-manifest-nats/src/: lib.rs  manifest_store.rs
hadb-manifest-redis/: Cargo.toml
hadb-manifest-redis/src/: lib.rs  manifest_store.rs
hadb-manifest-s3/: Cargo.toml
hadb-manifest-s3/src/: lib.rs  manifest_store.rs
hadb-nats/: Cargo.toml
hadb-nats/src/: lib.rs
hadb-s3/: Cargo.toml
hadb-s3/src/: error.rs  lease_store.rs  lib.rs  node_registry.rs  storage.rs
hadb-s3/tests/: integration_test.rs  list_limit_test.rs
hadb-storage/: Cargo.toml
hadb-storage-cinch/: Cargo.toml
hadb-storage-cinch/src/: lib.rs
hadb-storage-cinch/tests/: mock_server.rs
hadb-storage-local/: Cargo.toml
hadb-storage-local/src/: lib.rs
hadb-storage-mem/: Cargo.toml
hadb-storage-mem/src/: lib.rs
hadb-storage-s3/: Cargo.toml
hadb-storage-s3/src/: error.rs  lib.rs
hadb-storage-s3/tests/: integration.rs
hadb-storage/src/: fence.rs  lib.rs  storage.rs
hadb/src/: client.rs  coordinator.rs  follower.rs  ha_node.rs  lease.rs  lib.rs  manifest.rs  metrics.rs  node_registry.rs  sharded_lease.rs  traits.rs  types.rs
hadb/tests/: coordinator_test.rs  fault_injection.rs  ha_node_test.rs  property_coordinator.proptest-regressions  property_coordinator.rs  property_lease.rs  property_manifest.rs  s3_integration.rs
turbodb/: Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  SPEC.md
turbodb-manifest-cinch/: Cargo.toml
turbodb-manifest-cinch/src/: lib.rs  manifest_store.rs
turbodb-manifest-mem/: Cargo.toml
turbodb-manifest-mem/src/: lib.rs
turbodb-manifest-mem/tests/: cas.rs
turbodb-manifest-nats/: Cargo.toml
turbodb-manifest-nats/src/: lib.rs  manifest_store.rs
turbodb-manifest-redis/: Cargo.toml
turbodb-manifest-redis/src/: lib.rs  manifest_store.rs
turbodb-manifest-s3/: Cargo.toml
turbodb-manifest-s3/src/: error.rs  lib.rs  manifest_store.rs
turbodb/src/: config.rs  lib.rs  store.rs  types.rs
turbodb/tests/: durability.rs  serde_roundtrip.rs
