[workspace]
members = ["hadb", "hadb-io", "hadb-lease-s3", "hadb-lease-nats", "hadb-lease-etcd", "hadb-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/hadb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
