[workspace]
members = [
    "hadb",
    "hadb-storage",
    "hadb-storage-mem",
    "hadb-storage-local",
    "hadb-storage-s3",
    "hadb-storage-cinch",
    "hadb-lease",
    "hadb-lease-mem",
    "hadb-io",
    "hadb-lease-s3",
    "hadb-lease-nats",
    "hadb-lease-etcd",
    "hadb-lease-cinch",
    "hadb-manifest-s3",
    "hadb-manifest-nats",
    "hadb-manifest-etcd",
    "hadb-manifest-redis",
    "hadb-manifest-http",
    "hadb-changeset",
    "hadb-cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/hadb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Testing
proptest = "1.5"
proptest-derive = "0.5"
