[package]
name = "hadb-changeset"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified replication formats for the hadb ecosystem. Physical (.hadbp) and journal (.hadbj) changesets."

[features]
default = []
test-utils = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
hadb-io = { path = "../hadb-io", default-features = false }
sha2 = "0.10"
thiserror = "2"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
rand = { workspace = true }
hadb-io = { path = "../hadb-io", features = ["s3"] }
