[package]
name = "hadb-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared S3/retry/upload infrastructure for the hadb ecosystem."
keywords = ["ha", "s3", "retry", "replication", "upload"]
categories = ["database", "network-programming"]

[features]
default = ["s3"]
s3 = ["aws-sdk-s3", "aws-config", "aws-smithy-types"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# S3 (feature-gated)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-smithy-types = { version = "1", optional = true }

# Retry
rand = { workspace = true }

# Serialization (for RetryConfig, WebhookPayload, etc.)
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Webhook HTTP
reqwest = { workspace = true }

# HMAC signing for webhooks
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
proptest = { workspace = true }
proptest-derive = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
