[package]
name = "hadb-lease-cinch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cinch-protocol HTTP lease store for hadb. Speaks the /v1/lease routes with Bearer auth, and provides AtomicFence/AtomicFenceWriter for fencing storage writes."
keywords = ["ha", "cinch", "lease", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
hadb-lease = { path = "../hadb-lease", version = "0.4.0" }
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
base64.workspace = true
arc-swap = "1"

[dev-dependencies]
axum.workspace = true
uuid.workspace = true
serde_json.workspace = true
