[package]
name = "hadb-lease-etcd"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "etcd lease store for hadb -- zero-infra HA on Kubernetes"

[dependencies]
hadb = { path = "../hadb", version = "0.3.0" }
etcd-client = "0.18"
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dev-dependencies]
uuid.workspace = true
