[package]
name = "hadb-lease-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP lease store for hadb"
keywords = ["ha", "http", "lease", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
hadb-lease = { path = "../hadb-lease", version = "0.4.0" }
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
axum.workspace = true
uuid.workspace = true
serde_json.workspace = true
