[package]
name = "hadb-lease-nats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NATS JetStream KV lease store for hadb"

[dependencies]
hadb-lease = { path = "../hadb-lease", version = "0.4.0" }
async-nats = "0.46"
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
bytes = "1"

[dev-dependencies]
uuid.workspace = true
