[package]
name = "hadb-lease-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "S3 lease store and node registry for hadb coordination. CAS via S3 conditional PUTs."
keywords = ["ha", "s3", "leader-election", "lease"]
categories = ["database", "network-programming"]

[dependencies]
# Core hadb dependency
hadb = { path = "../hadb", version = "0.2.0" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
uuid = { workspace = true }
futures = "0.3"
