[package]
name = "hadb-lease"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LeaseStore trait for hadb HA coordination. Trait-only; impls live in sibling crates (hadb-lease-s3, hadb-lease-nats, hadb-lease-cinch, hadb-lease-mem)."
keywords = ["ha", "lease", "leader-election", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
hadb-storage = { path = "../hadb-storage", version = "0.4.0" }
arc-swap = "1"
# LeaseData: serde for wire encoding, chrono for is_expired's Utc::now().
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
uuid = { workspace = true }
