[package]
name = "hadb-manifest-etcd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "etcd manifest store for hadb -- zero-infra HA on Kubernetes"
keywords = ["ha", "etcd", "manifest", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
hadb = { path = "../hadb", version = "0.4.0" }
etcd-client = "0.18"
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = { workspace = true }
