[package]
name = "hadb-manifest-nats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NATS JetStream KV manifest store for hadb"
keywords = ["ha", "nats", "manifest", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
hadb = { path = "../hadb", version = "0.3.1" }
async-nats = "0.46"
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
bytes = "1"
rmp-serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = { workspace = true }
