[package]
name = "hadb-manifest-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis manifest store for hadb. Atomic CAS via Lua scripts."
keywords = ["ha", "redis", "manifest", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
hadb = { path = "../hadb", version = "0.4.0" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = { workspace = true }
