[package]
name = "hadb-manifest-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "S3 manifest store for hadb. CAS via S3 conditional PUTs, meta via HeadObject."
keywords = ["ha", "s3", "manifest", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
hadb = { path = "../hadb", version = "0.3.1" }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
serde_json = { workspace = true }
