[package]
name = "hadb-manifest-s3"
version = "0.4.0"
edition = "2021"
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/hadb"
description = "DEPRECATED — moved to turbodb-manifest-s3 in Phase Turbogenesis. This crate is an empty stub kept only so hakuzu's manifest resolves until hakuzu's own Phase GraphTurbogenesis lands. Delete after that."
publish = false
