[package]
name = "hadb-storage-cinch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cinch-protocol HTTP StorageBackend impl. Speaks /v1/sync/{prefix}/ routes with Bearer auth and Fence-Token fencing for HA writes."
keywords = ["ha", "storage", "cinch", "fencing"]
categories = ["database", "network-programming"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hadb-storage = { path = "../hadb-storage", version = "0.4.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
axum = { workspace = true }
uuid = { workspace = true }
