[package]
name = "hadb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Byte-level StorageBackend trait for the hadb ecosystem. Trait-only; impls live in separate crates (hadb-storage-s3, hadb-storage-local, hadb-storage-cinch, hadb-storage-mem)."
keywords = ["ha", "storage", "s3", "blob"]
categories = ["database", "network-programming"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
