[package]
name = "hadb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database-agnostic HA coordination framework. Leader election, replication, write forwarding."
keywords = ["ha", "replication", "leader-election", "coordination"]
categories = ["database", "network-programming"]

[dependencies]
# Core traits and coordination logic - ZERO cloud dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }

# hadb abstraction crates
hadb-lease = { path = "../hadb-lease", version = "0.4.0" }
hadb-lease-mem = { path = "../hadb-lease-mem", version = "0.4.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
proptest = { workspace = true }
proptest-derive = { workspace = true }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
hadb-lease-s3 = { path = "../hadb-lease-s3" }
hadb-manifest-s3 = { path = "../hadb-manifest-s3" }
