[package]
name = "turbodb-manifest-mem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "In-memory ManifestStore impl for turbodb. Test-only — CAS enforcement on put, no persistence."
keywords = ["database", "manifest", "in-memory", "testing"]
categories = ["database", "development-tools::testing"]

[dependencies]
turbodb = { path = "../turbodb", version = "0.4.0" }
hadb-storage = { path = "../hadb-storage", version = "0.4.0" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
