[package]
name = "turbodb-manifest-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis ManifestStore for turbodb. Atomic CAS via Lua scripts. Cluster-safe via colocated hash-tagged data + version side-keys."
keywords = ["database", "manifest", "redis", "cas"]
categories = ["database", "network-programming"]

[dependencies]
turbodb = { path = "../turbodb", version = "0.4.0" }
hadb-storage = { path = "../hadb-storage", version = "0.4.0" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }
