[package]
name = "turbodb-manifest-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "S3 ManifestStore for turbodb. CAS via S3 conditional PUTs (If-Match / If-None-Match), meta via HeadObject."
keywords = ["database", "manifest", "s3", "cas"]
categories = ["database", "network-programming"]

[dependencies]
turbodb = { path = "../turbodb", version = "0.4.0" }
hadb-storage = { path = "../hadb-storage", version = "0.4.0" }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }
