[package]
name = "turbodb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Manifest types and ManifestStore trait for the turbodb crate family — the shared commit format for tiered embedded databases (turbolite, turbograph, future turboduck)."
keywords = ["database", "manifest", "tiered-storage", "s3"]
categories = ["database", "data-structures"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
anyhow = { workspace = true }

# CasResult is the shared CAS primitive used by both LeaseStore and
# ManifestStore. It lives in hadb-storage (despite the name; lease
# crates re-export it from there too).
hadb-storage = { path = "../hadb-storage", version = "0.4.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
